--- a/src/main/resources/templates/event/viewEvent.html
+++ b/src/main/resources/templates/event/viewEvent.html
@@ -2,11 +2,11 @@
 <div class="container-fluid">
 	<h1 th:text="${event.eventName}"> </h1>
 	<ul>
-		<li></li>
-		<li th:text="|Host: ${user.firstName}|"></li>
+		<li th:text="|Host: ${user.firstName} ${user.lastName}|"></li>
 		<li th:text="|Date: ${event.eventDate}|"></li>
 		<li th:text="|Location: ${event.city}, ${event.state}|"></li>
-		<li th:text="|People who are attending the event: ${event.userEvents.Count()}|"></li>
+		<li th:text="|People who are attending the event:|"></li>
+		
 	</ul>
 
 	<table class="table">
@@ -27,13 +27,12 @@
 
 <div class="container-fluid">
 	<h3>Message Wall</h3>
-	<div th:each="message: ${event.messages}">
-		<p th:text="|${ message.host.firstName } says: ${ message.content }|"></p>
-	</div>
-	<form action="/events/${event.id}/comment" th:object="${message}" method="post">
+
+
+	<form action="/events/${event.id}/comment"  method="post">
 		<div class="form-group">
 			<label for="comment">Add Comment</label>
-			<textarea type="text" th:field="*{content}" placeholder="name"></textarea>
+			<textarea type="text"  placeholder="name"></textarea>
 			<button>Submit</button>
 		</div>
 	</form>
